# simple-ascii-image-generator

./: CMakeLists.txt  Doxyfile  LICENCE  README.md  main.cpp
doc/html/: ImageConverter_8h_source.html  annotated.html  classes.html  classish_1_1ascii_1_1ImageConverter-members.html  classish_1_1ascii_1_1ImageConverter.html  dir_1a54879d5638b92ef92af7e10abac6f3.html  dir_2dca26c3b8b9f04af0211b18c40a9156.html  dir_4f0d063a7055b5201778e3933d5103e8.html  dir_54f9bc92e69ba63c6f12b835467e2034.html  dir_8267f9f0a126f807962af3c18f3e86da.html  dir_8c722656380ef744882c7f94729b9e3e.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_9c21f488842504bf9c8137e70d2ca0e4.html  dir_dfd6ccf2523f58a1ad0e5acf199ad521.html  dir_e8a10cad6869348ef9fc1872ba12ec59.html  dir_f19ed6069cd8d270d4bb8ad7e908eb6c.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fa586d4311bc45a46150b37cf939bff9.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  md_README.html  pages.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
inc/: ImageConverter.h
lib/ImageConverter/: CMakeLists.txt  ImageConverter.cpp
lib/ImageConverter/headers/ImageConverter/: ImageConverter.h
src/: ImageConverter.cpp  main.cpp
